// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printPlan > should print plan with dependencies 1`] = `
"[1m    Job  Depends on[22m
[1m[22m#1  Dep  
#2  Job  #1
"
`;

exports[`printPlan > should print plan with workflow members 1`] = `
"[1m       Job[22m
[1m[22m#1     Test
├─ #2  A
└─ #3  B
"
`;

exports[`printPlan > should print simple plan 1`] = `
"[1m   Job[22m
[1m[22m#1  Test
"
`;

exports[`printPlan > should print spawned command 1`] = `
"[1m   Job[22m
[1m[22m#1  test
"
`;

exports[`printPlan > should print spawned script and workspace 1`] = `
"[1m   Job[22m
[1m[22m#1  Run [1mscript[22m script in workspace
"
`;
